# rsoft_cad

./: README.md  lantern_layout.py  migrate_utils.py  photonic_lantern.py  pyproject.toml  rsoft_circuit.py  simulations.py
.github/workflows/: docs.yml
beamprop/: beamprop_param_scan.py
config/: complete_pl_config.json  custom_config.json  default_config.json
docs/: README.md  _config.yml  api-reference.md  build_docs.sh  changelog.md  examples.md  index.md  installation.md  quick-start.md  tutorials.md
docs/sphinx/: Makefile  conf.py  index.rst  modules.rst  rsoft_cad.beamprop.rst  rsoft_cad.femsim.rst  rsoft_cad.geometry.rst  rsoft_cad.lantern.rst  rsoft_cad.layout.rst  rsoft_cad.optimisation.rst  rsoft_cad.rst  rsoft_cad.simulations.rst  rsoft_cad.utils.config.rst  rsoft_cad.utils.fiber_layout.rst  rsoft_cad.utils.rsoft_file_io.rst  rsoft_cad.utils.rsoft_file_plot.rst  rsoft_cad.utils.rst
examples/: fiber.py  ga_script.py  manual_mspl_config.py  mode_selective.py  mode_selective_PL_simulation.ipynb  mode_selective_examples.py  mode_selective_lantern.py  mspl_notebook.ipynb  multi_core.py  photonic_lantern.py  photonic_lanterns_examples.py  user_defined_taper.py
src/rsoft_cad/: __init__.py  constants.py  rsoft_circuit.py  rsoft_mspl.py  rsoft_simulations.py
src/rsoft_cad/beamprop/: __init__.py  beamprop_param_scan.py  beamprop_plot_util.py
src/rsoft_cad/femsim/: __init__.py  curve_fitting.py  data_processing.py  femsim_param_scan.py  femsim_plot.py  outlier_detection.py  param_scan.py  utils.py  visualisation.py
src/rsoft_cad/geometry/: __init__.py  (+2 more)
(+43 files in other folders)
